@@ -58,12 +58,21 @@ class SvgHandler extends ImageHandler {
 		if ( !parent::normaliseParams( $image, $params ) ) {
 			return false;
 		}
-		# Don't make an image bigger than wgMaxSVGSize
-		if ( $params['physicalWidth'] > $wgSVGMaxSize ) {
-			$srcWidth = $image->getWidth( $params['page'] );
-			$srcHeight = $image->getHeight( $params['page'] );
-			$params['physicalWidth'] = $wgSVGMaxSize;
-			$params['physicalHeight'] = File::scaleHeight( $srcWidth, $srcHeight, $wgSVGMaxSize );
+		# Don't make an image bigger than wgMaxSVGSize on the smaller side
+		if ( $params['physicalWidth'] <= $params['physicalHeight'] ) {
+			if ( $params['physicalWidth'] > $wgSVGMaxSize ) {
+				$srcWidth = $image->getWidth( $params['page'] );
+				$srcHeight = $image->getHeight( $params['page'] );
+				$params['physicalWidth'] = $wgSVGMaxSize;
+				$params['physicalHeight'] = File::scaleHeight( $srcWidth, $srcHeight, $wgSVGMaxSize );
+			}
+		} else {
+			if ( $params['physicalHeight'] > $wgSVGMaxSize ) {
+				$srcWidth = $image->getWidth( $params['page'] );
+				$srcHeight = $image->getHeight( $params['page'] );
+				$params['physicalWidth'] = File::scaleHeight( $srcHeight, $srcWidth, $wgSVGMaxSize );
+				$params['physicalHeight'] = $wgSVGMaxSize;
+			}
 		}
 		return true;
 	}
